tests_bucklescript/__snapshots__/Error_Apollo_missingField_re.56f8566c.0.snapshot
Error Apollo › missingField3.re › output
File \"operations/errors/missingField3.re\", line 15, characters 6-18:
15 |       doesNotExist
           ^^^^^^^^^^^^
Error: Unknown field 'doesNotExist' on type Lists

  We've found a bug for you!
  operations/errors/missingField3.re
  
  Error while running external preprocessor
Command line: ../_build/default/src/bucklescript_bin/bin.exe -apollo-mode '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx4d5eab' '/var/folders/nn/nkqr2fl53p93lzfh2n6s17hh0000gn/T/camlppx753988'

  

